# software_proj

./: .gitignore  CMakeLists.txt  TASKS.py  create_visualization.py  data_parser.py  eigengap_heuristic.c  eigengap_heuristic.py  kmeans.c  kmeans_pp.py  linalg.c  linalg.h  main.py  mykmeanssp.cp39-win_amd64.pyd  normalized_specrtal.py  setup.py  spectral_algo.py  tasks.py
inputs/: input_1000_2.txt  input_50000_2.txt
mykmeanssp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
